[tool.poetry]
name = "graphene-django-filter"
version = "0.1.0"
description = "Advanced filters for Graphene"
authors = ["squak <squakrazv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
graphene = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
