[tool.poetry]
name = "graphene-django-filter"
version = "0.1.0"
description = "Advanced filters for Graphene"
authors = ["squak <squakrazv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.2"
graphene = "2.1.9"
graphene-django = "^2.15.0"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
